--- a/source/_posts/20181030.md
+++ b/source/_posts/20181030.md
@@ -27,11 +27,15 @@ public Page<Article> findFirst10ByJob(Pageable pageable, [매개변수들]) {
 - Pageable은 더 쉽다. Html form에서 page, size, sort 값을
 보내주면 자동으로 sql문을 생성해준다.
 
-size 기본값은 20인듯 하다
-![](/Screen Shot 2018-10-30 at 10.39.30 PM.png)
-![](/Screen Shot 2018-10-30 at 10.39.35 PM.png)
-![](/Screen Shot 2018-10-30 at 11.12.44 PM.png)
-![](/Screen Shot 2018-10-30 at 11.12.56 PM.png)
+size 기본값은 20인듯 하다.
+
+너무 가볍개 구현해서 의심이 든다 내일 도서관에서 책이랑 같이 봐야 겠다.
+![](https://github.com/masterhwan/masterhwan.github.io/blob/master/2018/10/30/20181030/Screen%20Shot%202018-10-30%20at%2010.39.30%20PM.png?raw=true)
+![](https://github.com/masterhwan/masterhwan.github.io/blob/master/2018/10/30/20181030/Screen%20Shot%202018-10-30%20at%2010.39.35%20PM.png?raw=true)
+![](https://github.com/masterhwan/masterhwan.github.io/blob/master/2018/10/30/20181030/Screen%20Shot%202018-10-30%20at%2011.12.44%20PM.png?raw=true)
+![](https://github.com/masterhwan/masterhwan.github.io/blob/master/2018/10/30/20181030/Screen%20Shot%202018-10-30%20at%2011.12.56%20PM.png?raw=true)
 
 # RESTFUL API
-- 특징으로 클라이언트/서버 구조, 계층형 구조, 무상태성, 캐시, 코드 온 디맨드, 통합 인터페이스이 있다는 걸 알겠는데 여기서 나한테 와 닿는건 통합인터페이스 밖에 없다. 내가 웹서버와 was는 이미 무상태성을 지원하고, 내가 계층형 구조를 만드는게 아니라 이미 만들어진 구조를 가져다가 사용하고 있고, 
+- 특징으로 클라이언트/서버 구조, 계층형 구조, 무상태성, 캐시, 코드 온 디맨드, 통합 인터페이스이 있다는 걸 알겠는데 여기서 나한테 와 닿는건 통합인터페이스 밖에 없다. 내가 웹서버와 was는 이미 무상태성을 지원하고, 내가 계층형 구조를 만드는게 아니라 이미 만들어진 구조를 가져다가 사용하고 있고, 내가 직접적으로 건드리는건 url을 통해서 데이터를 주고 받는 것만 하다보니깐 누가 **RESTFUL API**가 뭐냐고 물어보면 어떻게 답해야 하는지 모르겠다.
+
+엄마한테 생일 선물 좋은거 하고 싶었는데 아쉽
