--- a/source/_posts/20181030.md
+++ b/source/_posts/20181030.md
@@ -33,8 +33,12 @@ size 기본값은 20인듯 하다.
 ![](https://github.com/masterhwan/masterhwan.github.io/blob/master/2018/10/30/20181030/Screen%20Shot%202018-10-30%20at%2010.39.30%20PM.png?raw=true)
 ![](https://github.com/masterhwan/masterhwan.github.io/blob/master/2018/10/30/20181030/Screen%20Shot%202018-10-30%20at%2010.39.35%20PM.png?raw=true)
 ![](https://github.com/masterhwan/masterhwan.github.io/blob/master/2018/10/30/20181030/Screen%20Shot%202018-10-30%20at%2011.12.44%20PM.png?raw=true)
-![](https://github.com/masterhwan/masterhwan.github.io/blob/master/2018/10/30/20181030/Screen%20Shot%202018-10-30%20at%2011.12.56%20PM.png?raw=true)![](https://github.com/masterhwan/masterhwan.github.io/blob/master/2018/10/30/20181030/Screen%20Shot%202018-10-30%20at%2011.12.56%20PM.png?raw=true)![](https://github.com/masterhwan/masterhwan.github.io/blob/master/2018/10/30/20181030/Screen%20Shot%202018-10-30%20at%2011.12.56%20PM.png?raw=true)
+![](https://github.com/masterhwan/masterhwan.github.io/blob/master/2018/10/30/20181030/Screen%20Shot%202018-10-30%20at%2011.12.56%20PM.png?raw=true)
+![](https://github.com/masterhwan/masterhwan.github.io/blob/master/2018/10/30/20181030/Screen%20Shot%202018-10-31%20at%201.52.51%20PM.png?raw=true)
+![](https://github.com/masterhwan/masterhwan.github.io/blob/master/2018/10/30/20181030/Screen%20Shot%202018-10-31%20at%201.52.38%20PM.png?raw=true)
+![](https://github.com/masterhwan/masterhwan.github.io/blob/master/2018/10/30/20181030/Screen%20Shot%202018-10-31%20at%201.52.26%20PM.png?raw=true)
 
+다음이나 네이버같은 곳은 앵커 태그가 아니라 자바스크립트로 처리하는듯 하다.
 # RESTFUL API
 - 특징으로 클라이언트/서버 구조, 계층형 구조, 무상태성, 캐시, 코드 온 디맨드, 통합 인터페이스이 있다는 걸 알겠는데 여기서 나한테 와 닿는건 통합인터페이스 밖에 없다. 내가 웹서버와 was는 이미 무상태성을 지원하고, 내가 계층형 구조를 만드는게 아니라 이미 만들어진 구조를 가져다가 사용하고 있고, 내가 직접적으로 건드리는건 url을 통해서 데이터를 주고 받는 것만 하다보니깐 누가 **RESTFUL API**가 뭐냐고 물어보면 어떻게 답해야 하는지 모르겠다.
 
