--- a/source/_posts/20190310.md
+++ b/source/_posts/20190310.md
@@ -1,5 +1,11 @@
 ---
-title: 20190310
+title: 20190304_20190310
 date: 2019-03-10 08:49:56
 tags:
 ---
+이번주는 바빠서 공부할 시간이 많지 않았다. 
+그래서 토이 프로젝트할 시간이 없어 알고리즘 연습문제를 풀곤 했다.
+저번주에 동생한테 물어보면서 했는데 동생 풀이법을 보니 이번주에 푸는 문제들에 많이 적용할 수 있었다.
+술술 풀린 문제도 있고 완벽하지 않아 인터넷을 참고한 풀이도 있고 머리로는 알고 있는데 구현을 못해서 본 적도 있다.
+그래도 전보다 실력이 상승한거 같다. 
+다음주에는 야근이 없어서 공부항 시간이 많았으면 좋겠다
